--- a/index.htm
+++ b/index.htm
@@ -25,13 +25,15 @@
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-20-11-110.png'><br>Pedri</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-21-56-825.png'><br>Benzema</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-22-55-560.png'><br>Courtois</div>
-<div><img loading='lazy' src='png/Picsart_22-05-21_10-25-23-864.png'><br>Félix</div>
-
+<div><img loading='lazy' src='png/Picsart_22-05-21_10-25-23-864.png'><br>de Tomás</div>
+<div><img loading='lazy' src='png/Picsart_22-05-21_10-26-14-151.png'><br>Canales</div>
+<div><img loading='lazy' src='png/Picsart_22-05-21_10-30-49-525.png'><br>Fekir</div>
+<div><img loading='lazy' src='png/Picsart_22-05-21_10-35-01-252.png'><br>Eder Militao</div>
 </div>
 <pre>
 Author  : zdor
-Updated : 21-May-2022 10:50
-Total   : 10
+Updated : 21-May-2022 11:03
+Total   : 9
 </pre>
 </body>
 </html>
