--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 </style>
 </head>
 <body>
-<div class="title">Renders</div>
+<div class="title">La Liga renders</div>
 <div class="text"></div>
 <div class="icon">
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-16-27-790.png'><br>Félix</div>
