--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-30-49-525.png'><br>Fekir</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-35-01-252.png'><br>Eder Militao</div>
 <div><img loading='lazy' src='png/Munian.png'><br>Munain</div>
-<div><img loading='lazy' src='https://eaassets-a.akamaihd.net/fifa/u/f/fm22/prod/s/static/players/players_22/p256154_PRIME.png?v=848rffjv3we'><br>Test</div>
+<div><img loading='lazy' src=https://eaassets-a.akamaihd.net/fifa/u/f/fm22/prod/s/static/players/players_22/p256154_PRIME.png><br>Test</div>
 </div>
 <pre>
 Author  : zdor
