--- a/index.htm
+++ b/index.htm
@@ -30,11 +30,12 @@
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-30-49-525.png'><br>Fekir</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-35-01-252.png'><br>Eder Militao</div>
 <div><img loading='lazy' src='png/Munian.png'><br>Munain</div>
+<div><img loading='lazy' src='png/Araújo.png'><br>Araújo</div>
 </div>
 <pre>
 Author  : zdor
-Updated : 21-May-2022 11:32
-Total   : 11
+Updated : 21-May-2022 14:07
+Total   : 12
 </pre>
 </body>
 </html>
