--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
 <div class="text"></div>
 <div class="icon">
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-16-27-790.png'><br>Félix</div>
-<div><img loading='lazy' src='png/Picsart_22-05-21_10-18-07-056.png'<br>Vinícius Júnior</div>
+<div><img loading='lazy' src='png/Picsart_22-05-21_10-18-07-056.png'<br>Viní JR</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-19-19-296.png'<br>Modric</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-20-11-110.png'><br>Pedri</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-21-56-825.png'><br>Benzema</div>
