--- a/index.htm
+++ b/index.htm
@@ -10,9 +10,9 @@
 .text              { border: 0px solid blue; padding: 0px;      margin-bottom: 20px; width: 2290px; font: normal 20px 'Roboto'; color: #000000; }
 .icon              { border: 0px solid red;  padding: 0px;                           width: 2290px; display: flex; flex-wrap: wrap; }
 .icon > div        { border: 0px solid blue; padding: 20px 5px; flex: 0 0 226px; text-align: center; font: 12px 'Roboto'; color: #000000; background: #ddd; }
-.icon > div > img  { border: 0px solid red;  padding: 5px;      width: 100px; height: 100px; object-fit: contain; }
-.icon > div > .ani { border: 0px solid red;  padding: 0px;      width: 100px; height: 100px; }
-.icon > div > .spn { border: 0px solid red;  padding: 5px;      width: 100px; height: 100px; background: #000; background-clip: content-box; }
+.icon > div > img  { border: 0px solid red;  padding: 5px;      width: 50px; height: 50px; object-fit: contain; }
+.icon > div > .ani { border: 0px solid red;  padding: 0px;      width: 50px; height: 50px; }
+.icon > div > .spn { border: 0px solid red;  padding: 5px;      width: 50px; height: 50px; background: #000; background-clip: content-box; }
 </style>
 </head>
 <body>
@@ -21,15 +21,15 @@
 <div class="icon">
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-16-27-790.png'><br>Félix</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-18-07-056.png'<br>Viní JR</div>
-<div><img loading='lazy' src='png/Picsart_22-05-21_10-19-19-296.png'<br>Modric</div>
+<div><img loading='lazy' src='png/Picsart_22-05-21_10-19-19-296.png'<br>Modrić</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-20-11-110.png'><br>Pedri</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-21-56-825.png'><br>Benzema</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-22-55-560.png'><br>Courtois</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-25-23-864.png'><br>de Tomás</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-26-14-151.png'><br>Canales</div>
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-30-49-525.png'><br>Fekir</div>
-<div><img loading='lazy' src='png/Picsart_22-05-21_10-35-01-252.png'><br>Eder Militao</div>
-<div><img loading='lazy' src='png/Munian.png'><br>Munain</div>
+<div><img loading='lazy' src='png/Picsart_22-05-21_10-35-01-252.png'><br>Éder Militão</div>
+<div><img loading='lazy' src='png/Munian.png'><br>Muniain</div>
 <div><img loading='lazy' src='png/Araújo.png'><br>Araújo</div>
 </div>
 <pre>
