--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,13 @@
 <meta name="viewport" content="width=device-width" />
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
 <style>
-.title             { border: 0px solid red;  padding: 0px;      margin: 30px 0;      width: 2290px; font: bold   60px 'Roboto'; color: #000000; }
-.text              { border: 0px solid blue; padding: 0px;      margin-bottom: 20px; width: 2290px; font: normal 20px 'Roboto'; color: #000000; }
-.icon              { border: 0px solid red;  padding: 0px;                           width: 2290px; display: flex; flex-wrap: wrap; }
-.icon > div        { border: 0px solid blue; padding: 20px 5px; flex: 0 0 226px; text-align: center; font: 12px 'Roboto'; color: #000000; background: #ddd; }
-.icon > div > img  { border: 0px solid red;  padding: 5px;      width: 50px; height: 50px; object-fit: contain; }
-.icon > div > .ani { border: 0px solid red;  padding: 0px;      width: 50px; height: 50px; }
-.icon > div > .spn { border: 0px solid red;  padding: 5px;      width: 50px; height: 50px; background: #000; background-clip: content-box; }
+.title             { border: 0px solid red;  padding: 0px;      margin: 30px 0;      width: 1190px; font: bold   44px 'Roboto'; color: #000000; } 
+ .text              { border: 0px solid blue; padding: 0px;      margin-bottom: 20px; width: 1190px; font: normal 18px 'Roboto'; color: #000000; } 
+ .icon              { border: 0px solid red;  padding: 0px;                           width: 1190px; display: flex; flex-wrap: wrap; } 
+ .icon > div        { border: 0px solid blue; padding: 20px 5px; flex: 0 0 226px; text-align: center; font: 7px 'Roboto'; color: #000000; background: #ddd; } 
+ .icon > div > img  { border: 0px solid red;  padding: 5px;      width: 80px; height: 80px; object-fit: contain; } 
+ .icon > div > .ani { border: 0px solid red;  padding: 0px;      width: 90px; height: 90px; } 
+ .icon > div > .spn { border: 0px solid red;  padding: 5px;      width: 80px; height: 80px; background: #000; background-clip: content-box; } }
 </style>
 </head>
 <body>
