--- a/index.htm
+++ b/index.htm
@@ -33,8 +33,8 @@
 <div><img loading='lazy' src='png/Araújo.png'><br>Araújo</div>
 </div>
 <pre>
-Author  : zdor
-Updated : 21-May-2022 14:07
+Author  : Artemii
+Updated : 21-May-2022 14:31
 Total   : 12
 </pre>
 </body>
