--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,7 @@
 <div><img loading='lazy' src='png/Picsart_22-05-21_10-35-01-252.png'><br>Éder Militão</div>
 <div><img loading='lazy' src='png/Munian.png'><br>Muniain</div>
 <div><img loading='lazy' src='png/Araújo.png'><br>Araújo</div>
+<div><img loading='lazy' src='png/Fati.png'><br>Fati</div>
 </div>
 <pre>
 Author  : Artemii
