--- a/index.htm
+++ b/index.htm
@@ -35,9 +35,9 @@
 <div><img loading='lazy' src='png/Fati.png'><br>Fati</div>
 </div>
 <pre>
-Author  : Artemii
-Updated : 21-May-2022 14:31
-Total   : 12
+Author  : zdor
+Updated : 22-May-2022 13:17
+Total   : 13
 </pre>
 </body>
 </html>
